    (much better API and easier to use)
  - switch to IntelliJ IDEA 12.1.5 as project IDE, added project files to VCS
  - reformated all Java and Groovy source files to common Java source code
    format guidelines (reformating done by IntelliJ IDEA)
  - cleanup of import statements in all Java and Groovy source files
    (done by IntelliJ IDEA)
  - use of Lambda features in module st-util
  - use of Lambda features in module sportstracker

v5.8.0 (not released):
 SportsTracker changes:
  - use of new default Mercurial repository after SourceForge project 
    platform update
  - update of libraries to recent versions:
    - update of Groovy to version 2.1.7
    - update of JFreeChart to version 1.0.15
    - update of JUnit to 4.11
    - update of EasyMock to 3.2
  - update of Maven plugins to recent versions:
    - update of maven-compiler-plugin to version 3.2
    - update of groovy-eclipse-compiler to version 2.8.0-01
    - update of groovy-eclipse-batch to version 2.1.5-03
    - update of maven-dependency-plugin to version 2.8
  - successfull tests of SportsTracker with Java 8 EA (build 106)
 Translations:
  - updated french translation by Nicolas Ollivier <nicollivier@gmail.com>

v5.7.0:
 ExerciseViewer changes:
  - update of Garmin FIT SDK to version 4.20 (for parsing FIT files)
  - support for Garmin Forerunner 910XT exercises (Feature request #3578651)
    => there are still minor problems in exercises with sport type 
       transitions, e.g. for triathlon) 
  - Timex Ironman Run Trainer PWX support (bug report #3599059):
    - added support for Timex Ironman Run Trainer PWX exercises, calculation
      of missing statistic data
    - unit test for Timex Ironman Run Trainer PWX files
  - proper error handling when ExerciseViewer parsers fail to read an exercise
    file (displays an error message dialog and prints error details to the 
    console)
 Translations:
  - updated spanish translation by Luis Llorente Campo
    <luisllorente@luisllorente.com>