@@ -11,6 +11,7 @@ v6.0.0:
     format guidelines (reformating done by IntelliJ IDEA)
   - cleanup of import statements in all Java and Groovy source files
     (done by IntelliJ IDEA)
+  - fixed all compiler warnings
   - use of Lambda features in module st-util
   - use of Lambda features in module sportstracker
 
